feat: Add and config NLog logger witj mailkit

--- a/MailingWebApp/appsettings.json
+++ b/MailingWebApp/appsettings.json
@@ -1,9 +1,61 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information"
+    },
+    "NLog": {
+      "IncludeScopes": true
     }
+  },
+  "NLog": {
+    "throwConfigExceptions": true,
+    "extensions": [
+      { "assembly": "NLog.MailKit" }
+    ],
+    "targets": {
+      "async": true,
+      "logfile": {
+        "type": "File",
+        "fileName": "./log/nlog-${shortdate}.log"
+      },
+      "logconsole": {
+        "type": "Console"
+      },
+      "mailFallback": {
+        "type": "FallbackGroup",
+        "returnToFirstOnSuccess": true,
+        "targets": {
+          "mainmail": {
+            "type": "Mail",
+            "smtpAuthentication": "Basic",
+            "smtpUserName": "xxxxxxxxx@yandex.ru",
+            "smtpPassword": "xxxxxxxxx",
+            "subject": "log-${shortdate}",
+            "to": "xxxxxxxxx@yandex.ru",
+            "from": "xxxxxxxxx@yandex.ru",
+            "smtpServer": "smtp.yandex.ru",
+            "smtpPort": "25"
+          }
+        }
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Debug",
+        "writeTo": "logconsole"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Debug",
+        "writeTo": "logfile"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Error",
+        "writeTo": "mainmail"
+      }
+    ]
   },
   "AllowedHosts": "*",
   "MailingServiceSettings": {
