style: Add console logs highlighting levels

--- a/MailingWebApp/appsettings.json
+++ b/MailingWebApp/appsettings.json
@@ -19,7 +19,22 @@
         "fileName": "./log/nlog-${shortdate}.log"
       },
       "logconsole": {
-        "type": "Console"
+        "type": "ColoredConsole",
+        "useDefaultRowHighlightingRules": false,
+        "wordHighlightingRules ": [
+          {
+            "foregroundColor": "Green",
+            "ignoreCase": true,
+            "text": "info",
+            "wholeWords": true
+          },
+          {
+            "foregroundColor": "Red",
+            "ignoreCase": true,
+            "text": "error",
+            "wholeWords": true
+          }
+        ]
       },
       "mailFallback": {
         "type": "FallbackGroup",
