--- a/MailingWebApp/MailingWebApp.csproj
+++ b/MailingWebApp/MailingWebApp.csproj
@@ -8,8 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.0.2" />
     <PackageReference Include="NLog.MailKit" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
@@ -18,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
     <ProjectReference Include="..\Mailing\Mailing.csproj" />
+    <ProjectReference Include="..\OpenReceivingMeterReadingsPeriodModelProvider\OpenReceivingMeterReadingsPeriodModelProvider.csproj" />
     <ProjectReference Include="..\PluginManager\PluginManager.csproj" />
   </ItemGroup>
 
