feat: Add ConnectionStrings config section

--- a/MailingWebApp/appsettings.json
+++ b/MailingWebApp/appsettings.json
@@ -72,6 +72,9 @@
       }
     ]
   },
+  "ConnectionStrings": {
+    "StorageDb": "Data Source=C:/Users/Mikhail/MailingWebApp/storage.db"
+  },
   "AllowedHosts": "*",
   "MailingServiceSettings": {
     "SenderEmail": "qwerty@yandex.ru",
