--- a/MailingWebApp/MailingWebApp.csproj
+++ b/MailingWebApp/MailingWebApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="linq2db.AspNet" Version="4.1.1" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.0.2" />
     <PackageReference Include="NLog.MailKit" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
