refactor: Change StorageDb connection string

--- a/MailingWebApp/appsettings.json
+++ b/MailingWebApp/appsettings.json
@@ -73,7 +73,7 @@
     ]
   },
   "ConnectionStrings": {
-    "StorageDb": "Data Source=C:/Users/Mikhail/MailingWebApp/storage.db"
+    "StorageDb": "Data Source=./bin/Debug/storage.db"
   },
   "AllowedHosts": "*",
   "MailingServiceSettings": {
