feat: Add loading from storage

--- a/OpenReceivingMeterReadingsPeriodModelProvider/OpenReceivingMeterReadingsPeriodModelProvider.csproj
+++ b/OpenReceivingMeterReadingsPeriodModelProvider/OpenReceivingMeterReadingsPeriodModelProvider.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
     <ProjectReference Include="..\Mailing\Mailing.csproj" />
   </ItemGroup>
 
