feat: Add NLog config with message filtering by [EMAIL] tag

--- a/MailingWebApp/appsettings.json
+++ b/MailingWebApp/appsettings.json
@@ -58,7 +58,16 @@
       {
         "logger": "*",
         "minLevel": "Debug",
-        "writeTo": "logconsole"
+        "writeTo": "logconsole",
+        "filterDefaultAction": "Log",
+        "filters": [
+          {
+            "type": "when",
+            "action": "Ignore",
+            // NOTE: ConsoleTarget ignore message with `[EMAIL]` tag
+            "condition": "contains('${message}','[EMAIL]')"
+          }
+        ]
       },
       {
         "logger": "*",
@@ -67,8 +76,17 @@
       },
       {
         "logger": "*",
-        "minLevel": "Error",
-        "writeTo": "mainmail"
+        "minLevel": "Trace",
+        "writeTo": "mainmail",
+        "filterDefaultAction": "Ignore",
+        "filters": [
+          {
+            "type": "when",
+            "action": "Log",
+            // NOTE: MailTarget ignore all message without `[EMAIL]` tag
+            "condition": "contains('${message}','[EMAIL]')"
+          }
+        ]
       }
     ]
   },
