style: Add higliting for debug messages

--- a/MailingWebApp/appsettings.json
+++ b/MailingWebApp/appsettings.json
@@ -29,6 +29,12 @@
             "wholeWords": true
           },
           {
+            "foregroundColor": "Blue",
+            "ignoreCase": true,
+            "text": "debug",
+            "wholeWords": true
+          },
+          {
             "foregroundColor": "Red",
             "ignoreCase": true,
             "text": "error",
