feat: Replcae ActivationInterval with RecurrenceActivation in initializer and repo

--- a/MailingWebApp/MailingWebApp.csproj
+++ b/MailingWebApp/MailingWebApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common.Infrastructure\Common.Infrastructure.csproj" />
     <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
     <ProjectReference Include="..\Mailing\Mailing.csproj" />
     <ProjectReference Include="..\OpenReceivingMeterReadingsPeriodModelProvider\OpenReceivingMeterReadingsPeriodModelProvider.csproj" />
