refactor: Change PluginService abstractions name

--- a/PluginManager/PluginManager.csproj
+++ b/PluginManager/PluginManager.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Mailing\Mailing.csproj" />
+    <ProjectReference Include="..\PluginManager.Abstractions\PluginManager.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
